fix: body starts behind navbar

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.layout {
+.body {
     max-width: 1080px;
     margin: auto;
+    position: relative;
+    top: 50px;
+    padding: 8px;
 }
